# simpleml

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.pytest_cache/v/cache/: nodeids
main/: __init__.py  base.py  cluster.py  ensemble.py  linear_model.py  metrics.py  model_selection.py  naive_bayes.py  preprocessing.py  svm.py  tree.py  utils.py
simpleml/: cluster.py  ensemble.py  linear_model.py  model_selection.py  naive_bayes.py  svm.py  tree.py
src/simpleml/: __init__.py
src/simpleml/core/: __init__.py  base.py
src/simpleml/metrics/: __init__.py  classification.py  regression.py
src/simpleml/models/: __init__.py  clustering.py  ensemble.py  linear.py  naive_bayes.py  svm.py  tree.py
src/simpleml/nn/: __init__.py
src/simpleml/utils/: __init__.py  model_selection.py  preprocessing.py  validation.py
src/simpleml_auronss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_clustering.py  test_core_base.py  test_ensemble.py  test_linear_model.py  test_metrics.py  test_metrics_classification.py  test_metrics_regression.py  test_model_selection.py  test_models_clustering.py  test_models_ensemble.py  test_models_linear.py  test_models_naive_bayes.py  test_models_svm.py  test_models_tree.py  test_naive_bayes.py  test_preprocessing.py  test_svm.py  test_tree.py  test_utils_model_selection.py  test_utils_preprocessing.py  test_utils_validation.py
