[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleml-auronss"
version = "0.2.0"
authors = [{name = "Serge Auronss", email = "auronss.ms@gmail.com"}]
description = "A pure Python/NumPy Machine Learning Library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

# Auto-discovery of packages in 'src'
[tool.setuptools.packages.find]
where = ["src"]